--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,28 @@ name = "LocalVideoTranslator"
 requires-python = ">=3.10"
 dependencies = [
     "Flask==3.0.3",
+    "python-dotenv==1.0.1",
     "torch==2.0.0",
     "torchvision==0.15.1",
-    "torchaudio==2.0.0"
+    "torchaudio==2.0.0",
+    "llama-cpp-python==0.3.1",
+    "ctranslate2==4.4.0",
+    "git+https://github.com/m-bain/whisperx.git"
 ]
+version = '1.0'
 
 [project.optional-dependencies]
-dev = ["pytest==8.3.3", "pre-commit==4.0.1", "ruff==0.7.1"]
+dev = [
+    "pytest==8.3.3",
+    "pre-commit==4.0.1",
+    "ruff==0.7.1"
+]
+
+[tool.pip]
+extra-index-url = "https://download.pytorch.org/whl/cu118"
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.ruff]
 line-length = 120
