--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "torch==2.0.0",
     "torchvision==0.15.1",
     "torchaudio==2.0.0",
-    "llama-cpp-python==0.3.1",
+    "ollama==0.4.7",
     "ctranslate2==4.4.0",
     "git+https://github.com/m-bain/whisperx.git"
 ]
